--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-                <h1 class="header">David Todd</h1>
+                <h1 class="header">david alan todd</h1>
                 <nav>
                     <a href="/index.html" class="header">About</a>
                     <a href="/bio.html" class="header">Bio</a>
@@ -15,7 +15,23 @@
                 </nav>
         </header>
         <main>
-            <h2>The main content.</h2>
+            <!--title here-->
+            <div class="about"> 
+                    <img src="pictures/DTHeadshot.jpeg" alt="headshot of David Todd"/>
+                <div class="aboutText">
+                    <h1>software engineering coach</h1>
+                    <h4>empathetic. futuristic. developer.</h4>
+                    <p>a human-centered educator with an interest in software engineering and the intersections
+                        of people and computers. experiences in college administration, computer science,
+                        program managemement, mentorship, leadership development, and equity, diversity and inclusion.</p>
+                </div>
+            </div>
+            <div class="words">
+                <h1 class="bio">biography</h1>
+                <h1 class="experience">experience</h1>
+                <h1 class="portfolio">portfolio</h1>
+            </div>
+            
         </main>
         <footer>
             <h3>Footer</h3>
