finalized content with subpages

--- a/experience.html
+++ b/experience.html
@@ -6,20 +6,42 @@
     </head>
     <body>
         <header>
-            <h1 class="header">David Todd</h1>
+            <h1 class="header">david alan todd</h1>
             <nav>
-                <a href="/index.html" class="header">About</a>
-                <a href="/bio.html" class="header">Bio</a>
-                <a href="/experience.html" class="header">Experience</a>
-                <a href="/portfolio.html" class="header">Portfolio</a>
+                <a href="/index.html" class="header">about</a>
+                <a href="/bio.html" class="header">bio</a>
+                <a href="/experience.html" class="header">experience</a>
+                <a href="/portfolio.html" class="header">portfolio</a>
             </nav>
         </header>
         <main>
-            <h2>Experience</h2>
+            <div class="words">
+                <h1 class="subpagecard" id="experience">experience</h1>
+            </div>
+            <div class="exp">
+                <h2>Software Engineering Coach @ Multiverse</h2>
+                <p>Creating a diverse group of future leaders and providing an outstanding alterative to college and university. (June 2022 - Present)</p>
+            </div>
+            <div class="exp">
+                <h2>Associate Director of Student Transitions @ Emerson College</h2>
+                <p>Developed and implemented the New Student Orientation program and oversaw the Orientation Leader program. (March 2020 - June 2022)</p>
+            </div>
+            <div class="exp">
+                <h2>College Student Affairs Administration, M.Ed.</h2>
+                <p>Earned from the University of Georgia. (2015)</p>
+            </div>
+            <div class="exp">
+                <h2>Computer Science, B.S. & Theatre, B.A.</h2>
+                <p>Earned a dual-degree from the University of Maryland, College Park. (2013)</p>
+            </div>
         </main>
         <footer>
-            <h3>Footer</h3>
-            <!--put social links here-->
+            <a href="https://www.linkedin.com/in/david-alan-todd" target="_blank" rel="noreferrer opener">
+                    <img src="pictures/linkedin.png" alt="linkedin logo">
+            </a>
+            <a href="https://www.multiverse.io" target="_blank" rel="noreferrer opener">
+                <img src="pictures/multiverse.png" alt="Multiverse logo">
+            </a>
         </footer>
     </body>
 </html>
