--- a/portfolio.html
+++ b/portfolio.html
@@ -6,20 +6,30 @@
     </head>
     <body>
         <header>
-            <h1 class="header">David Todd</h1>
+            <h1 class="header">david alan todd</h1>
             <nav>
-                <a href="index.html" class="header">About</a>
-                <a href="bio.html" class="header">Bio</a>
-                <a href="experience.html" class="header">Experience</a>
-                <a href="portfolio.html" class="header">Portfolio</a>
+                <a href="/index.html" class="header">about</a>
+                <a href="/bio.html" class="header">bio</a>
+                <a href="/experience.html" class="header">experience</a>
+                <a href="/portfolio.html" class="header">portfolio</a>
             </nav>
         </header>
         <main>
-            <h2>Portfolio</h2>
+            <div class="words">
+                <h1 class="subpagecard" id="portfolio">portfolio</h1>
+            </div>
+            <div class="exp">
+                <h2>Coming soon!</h2>
+                <p>Stay tuned for updates.</p>
+            </div>
         </main>
         <footer>
-            <h3>Footer</h3>
-            <!--put social links here-->
+            <a href="https://www.linkedin.com/in/david-alan-todd" target="_blank" rel="noreferrer opener">
+                    <img src="pictures/linkedin.png" alt="linkedin logo">
+            </a>
+            <a href="https://www.multiverse.io" target="_blank" rel="noreferrer opener">
+                <img src="pictures/multiverse.png" alt="Multiverse logo">
+            </a>
         </footer>
     </body>
 </html>
