fixed child pages on all - without slash

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <header>
                 <h1 class="header">david alan todd</h1>
                 <nav>
-                    <a href="/profile-site/index.html" class="header">about</a>
-                    <a href="/profile-site/bio.html" class="header">bio</a>
-                    <a href="/profile-site/experience.html" class="header">experience</a>
-                    <a href="/profile-site/portfolio.html" class="header">portfolio</a>
+                    <a href="index.html" class="header">about</a>
+                    <a href="bio.html" class="header">bio</a>
+                    <a href="experience.html" class="header">experience</a>
+                    <a href="portfolio.html" class="header">portfolio</a>
                 </nav>
         </header>
         <main>
@@ -32,15 +32,15 @@
             </div>
             <div class="words">
                 
-                <a href="/bio.html" class="card" id="bio" >
+                <a href="bio.html" class="card" id="bio" >
                     <h1 class="bio">biography</h1>
                 </a>       
                 
-                <a href="/experience.html" class="card" id="experience">
+                <a href="experience.html" class="card" id="experience">
                     <h1 class="experience">experience</h1>
                 </a>
 
-                <a href="/portfolio.html" class="card" id="portfolio">
+                <a href="portfolio.html" class="card" id="portfolio">
                     <h1 class="portfolio">portfolio</h1>
                 </a>
             </div>
